(fix) Aligned icons with text description.

--- a/src/assets/stylesheets/application/_info.scss
+++ b/src/assets/stylesheets/application/_info.scss
@@ -22,7 +22,7 @@ $padding-left-items: 25px;
   color: #000;
 
   .ballots & {
-    background-position: 0 7px;
+    background-position: 0 2px;
     background-repeat: no-repeat;
     color: #333333;
     font-size: 14px;
